--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="card-body">
                         <h3 class="heading display-5 pb-3">Кредитный калькулятор</h3>
                         <div id="error" class="mb-3 error loaderNonBlock">
-                            <h4> Пожалуйста, заполните все поля!!!</h4>
+                            <h4>*Поля обязательны для заполнения</h4>
                         </div>
                         <form id="loan-form">
                             <div class="mb-3">
